# stammdaten

./: .directory  .gitignore  .travis.yml  .~lock.Dokumentation.odt#  Architekturdokumentation.odt  Dokumentation.odt  README.adoc  README.md  make_signoz_reachable.sh  pom.xml
Lagerverwaltung/: .directory  .forge_settings  pom.xml
Lagerverwaltung-domain/: pom.xml
Lagerverwaltung-ejb/: pom.xml
Lagerverwaltung-web/: pom.xml
LagerverwaltungDomain/: pom.xml
LagerverwaltungEJB/: pom.xml
LagerverwaltungWeb/: pom.xml
Stammdaten-core/: pom.xml
Stammdaten-coredomain/: .directory  README.md  pom.xml
Stammdaten-pom/: pom.xml
Stammdaten-pom-domain/: pom.xml
Stammdaten-pom-ejb/: pom.xml
Stammdaten-pom-fx/: pom.xml
Stammdaten-pom-jaxrsclient/: pom.xml
Stammdaten-pom-persistence/: pom.xml
Stammdaten-pom-web/: pom.xml
StammdatenCoreDomain/: .forge_settings  pom.xml
currency-service/: Cargo.toml  Dockerfile  cargo_docker_kind.sh  cargo_rancher.sh
currency-service-infra/: cdk8s.yaml  pom.xml
currency-service/src/: main.rs
images/: clean_architcture.xcf
k8s-infra/: pom.xml  setup_kind_cluster.sh
kore-arquillian/: pom.xml
kore-arquillian-ejb/: nb-configuration.xml  pom.xml
kore-arquillian-it/: nbactions-wildfly.xml  pom.xml
publishingcompany-app/: README.adoc  README.md  pom.xml
publishingcompany-client/: pom.xml  runPom.xml
publishingcompany-service/: change_book_price_testdata.json  container-image_kind.sh  curl_change_book_price.sh  pom.xml
publishingcompany-service-infra/: pom.xml
publishingcompany-slides/: pom.xml
(+1010 files in other folders)
