[package]
name = "currency-service"
version = "0.1.0"
edition = "2021"
docker_tag = "kore/currency-service:0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
