[package]
name = "currency-service"
version = "0.2.0"
edition = "2021"
docker_tag = "kore/currency-service:0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-tracing-opentelemetry = { version = "0.10", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
tower = "0.4"
tower-http = "0.4"
tracing = "0.1"
tracing-opentelemetry = "0.18"
